# flower-i18n-zh

./: .gitignore  EXAMPLE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_package.py
flower_i18n/: __init__.py  i18n.py  patcher.py
flower_i18n/locales/en_US/: messages.json
flower_i18n/locales/zh_CN/: messages.json
flower_i18n/static/js/: i18n.js
